Added ListControl item editing

--- a/src/assets/css/styles.less
+++ b/src/assets/css/styles.less
@@ -13,6 +13,16 @@ body {
 .list {
   & &__icon {
     color: @text_primary;
+    margin-right: 8px !important;
+  }
+
+  & &__text {
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+
+  & &__input {
+    width: 100%;
   }
 }
 
