Made left nav bar fixed width

--- a/src/assets/css/styles.less
+++ b/src/assets/css/styles.less
@@ -22,12 +22,20 @@ body {
 
 .layout {
   &__row {
+    width: 100%;
     margin: 0;
   }
 
-  &__col {
-    padding: 0;
-    min-height: 100vh;
+  @media only screen and (min-width: @breakpoint_tablet) {
+    &__col-left {
+      float: left;
+      width: 300px;
+      min-height: 100vh;
+    }
+
+    &__col-right {
+      margin-left: 300px;
+    }
   }
 }
 
