Set appbar and side bar position fixed, set FAB icon position on desktop

--- a/src/assets/css/styles.less
+++ b/src/assets/css/styles.less
@@ -31,6 +31,7 @@ body {
       float: left;
       width: 300px;
       min-height: 100vh;
+      position: fixed;
     }
 
     &__col-right {
@@ -40,6 +41,9 @@ body {
 }
 
 .layout-appbar {
+  width: 100%;
+  position: fixed;
+
   @media only screen and (min-width: @breakpoint_tablet) {
     &__menu-button {
       display: none;
@@ -117,6 +121,12 @@ body {
 
 .fab {
   position: fixed !important;
+  z-index: 1;
+
+  @media only screen and (min-width: @breakpoint_tablet) {
+    transform: inherit !important;
+    left: 264px !important;
+  }
 
   & &__icon {
     color: @text_primary;
