Added padding to main content area to account for fixed navbar

--- a/src/assets/css/styles.less
+++ b/src/assets/css/styles.less
@@ -73,6 +73,8 @@ body {
 }
 
 .main-content {
+  padding-top: 34px;
+
   &--small-hide {
     @media only screen and (max-width: @breakpoint_phone) {
       display: none;
