Added task editing and sorting

--- a/src/assets/css/styles.less
+++ b/src/assets/css/styles.less
@@ -127,6 +127,7 @@ body {
 
   @media only screen and (min-width: @breakpoint_tablet) {
     transform: inherit !important;
+    top: 88px;
     left: 264px !important;
   }
 
