Applied new theme to LoginView

--- a/src/assets/css/styles.less
+++ b/src/assets/css/styles.less
@@ -1,3 +1,10 @@
+@import 'grid.less';
+
+// Remove 8px margins from grid rows to prevent horizontal scrolling.
+.row {
+  margin: 0;
+}
+
 // @appbar_background: #2196F3;
 // @dark_theme_background: #303030;
 // @dark_theme_card_background: #424242;
