Applied theme to LayeredLayout

--- a/src/assets/css/grid.less
+++ b/src/assets/css/grid.less
@@ -1,7 +1,6 @@
-@breakpoint-large-screen: 960px;
-@padding-small-screen: 16px;
-@padding-large-screen: 24px;
-@max-width: 1400px;
+@import 'keylines.less';
+// @max-width: 1400px;
+@max-width: 1000px;
 
 .container {
   width: 100%;
