--- a/src/assets/layout.less
+++ b/src/assets/layout.less
@@ -1,23 +1,41 @@
-.centered-content {
+.container {
   width: 100%;
   max-width: 1280px;
   margin: 0 auto;
 }
 
+.layout {
+  &-centered {
+    text-align: center;
+  }
+
+  &-centered-small {
+    text-align: center;
+    margin: 0 auto;
+    max-width: 650px;
+  }
+}
+
+.centered-content {
+  // width: 100%;
+  // max-width: 1280px;
+  // margin: 0 auto;
+}
+
 .page-content {
   .centered-content();
-  padding-left: 16px;
-  padding-right: 16px;
+  // padding-left: 16px;
+  // padding-right: 16px;
 }
 
 .not-mobile(@rules) {
   @media only screen and (min-width: 945px) {
-    @rules();
+    // @rules();
   }
 }
 
 .mobile(@rules) {
   @media only screen and (max-width: 944px) {
-    @rules();
+    // @rules();
   }
 }
